--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DSN="root:Wang1234.@tcp(127.0.0.1:3306)/goblog?charset=utf8mb4&parseTime=True&loc=Local"
+DSN="jiangleiw:N4QeGvNO3WND8DFt@tcp(mysql.sqlpub.com:3306)/jiangleiw?charset=utf8mb4&parseTime=True&loc=Local"
 PORT="3000"
